clusters/firefly/apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: linuxserver/plex:1.41.2
          ports:
            - containerPort: 32400 # Plex web interface
            - containerPort: 1900  # Plex DLNA server
#            - containerPort: 5353  # Bonjour/Avahi
#            - containerPort: 8324  # Plex Roku Companion
            - containerPort: 32410 # GDM network discovery
            - containerPort: 32412 # GDM network discovery
            - containerPort: 32413 # GDM network discovery
            - containerPort: 32414 # GDM network discovery
#            - containerPort: 32469 # DLNA server
          volumeMounts:
            - mountPath: /config
              name: plex
            - mountPath: /movies
              name: movies
            - mountPath: /series
              name: series
      volumes:
        - name: plex
          persistentVolumeClaim:
            claimName: plex
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: series
          persistentVolumeClaim:
            claimName: series
